--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
             </div>
             <div class="menu">
                 <div class="menu-button">
-                    <a href="home.html">Taisa</a>
+                    <a href="home.html">HOME</a>
                 </div>
 
                 <div class="menu-button">
