--- a/home.html
+++ b/home.html
@@ -12,6 +12,11 @@
 </head>
 <body> 
     <div class="logo-menu">
+        <div class="hamburger-menu">
+            <a href="javascript:void(0);" class="icon" onclick="openNav()">
+                <img src="homeAsset/hamburger-menu.png" alt="">
+              </a>
+        </div>
         <div class="logo">
             <img src="aboutAsset/LogoJenshinImpekz.png" alt="Jenshin Impactz">
         </div>
@@ -37,6 +42,14 @@
                 <a href="about.html">ABOUT</a>
             </div> 
         </div>
+    </div>
+
+    <div class="drop-down active" id="dropdown">
+        <a href="home.html">HOME</a>
+        <a href="character.html">CHARACTER</a>
+        <a href="register.html">REGISTER</a>
+        <a href="map.html">MAPS</a>
+        <a href="about.html" class="about">ABOUT</a>
     </div>
         
     <div class="section-one">
