--- a/register.html
+++ b/register.html
@@ -58,7 +58,7 @@
                     <input type="submit" class="buttonSubmit" id="button-submit" value="Play for Free">
                 <!-- </a> -->
                 
-                <a href="login.html" class="btn-returnLogin">
+                <a href="index.html" class="btn-returnLogin">
                     <div class="return">
                         <p>Return to Login></p>
                     </div>
